tests/paczka2/big_fuzzy/47700879.err
Error in line 12: YU8 S377 85,4
Error in line 29: HroKîQSsUay S465 77,2
Error in line 20: IMszIy S465 38,9
Error in line 31: IMszIy S896 88,3
Error in line 23: S465 S896 87,2
Error in line 38: S465 S377 -6,9
Error in line 26: HroKCQSsUay S269 85,5
Error in line 36: IMszIy S269 200,2
Error in line 41: MN74sQvzbJN S896 13,8
Error in line 42: HroKCQSsUay S465 262,5
Error in line 46: YU8 S269 2,7
Error in line 45: HroKCQSsUay S896 30,9
Error in line 61: 8JnOJpn S269 32,8
Error in line 71: S465 S377 -4,0
Error in line 72: IMszIy S465 44,4
Error in line 82: jLLXc S377 356,8
Error in line 69: YU8 S896 197,1
Error in line 85: IMszIy S465 24,2
Error in line 104: MN74sQvzbJN S465 54,0
Error in line 113: MN74sQvzbJN S896 47,7
Error in line 117: jLLXcZS896Z2,0
Error in line 115: 8JnOJpn S269 5,7
Error in line 116: jLLXc S896 28,6
Error in line 68: HroKCQSsUay S269 0,0
Error in line 127: YU8 S465 170,0
Error in line 134: YU8 S896 67,8
Error in line 137: HroKCQSsUay S896 66,6
Error in line 145: jLLXc S86 2,3
Error in line 149: YU8 S896 99,6
Error in line 148: S465 S896 7,9
Error in line 153: S46/ S377 49,6
Error in line 169: MN74sQvzbJN S896 -4,2
Error in line 146: 8JnOJpn S377 138,5
Error in line 170: 8JnOJpn S269 6,0
Error in line 164: MN74sQvzbJN S896 96,0
Error in line 181: YU8 St65 3,3
Error in line 177: MN74sQvzbJN S377 0,0
Error in line 156: HroKCQSsUay S377 8,2
Error in line 197: IMszIy S377 106,47
Error in line 160: jLLXc S896 32,0
Error in line 206: MN74sQvzbJN S269 4;,0
Error in line 200: MN74sQvzbJN S896 47,7
Error in line 203: S465 S377 38,8
Error in line 218: S465 S269 82,8
Error in line 219: S465 S377 53,5
Error in line 195: IMszIy S377 54,7
Error in line 220: S465 S465 81,8
Error in line 226: S465 S896 54,4
Error in line 235: S465 S465 53,9
Error in line 237: IMszIy S269 75,2
Error in line 239: IMszIy S465 95,4
Error in line 249: jLLXc S377 `1,9
